# crewnecta-qa-flow

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: config.py  server.py
backend/bridge/: event_bridge.py  run_manager.py
backend/routes/: flow.py  transcripts.py
backend/ws/: handler.py  manager.py
data/: mock_transcripts.json
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/src/assets/css/: main.css
frontend/src/components/Input/: TranscriptUploader.vue
frontend/src/components/Pipeline/: FlowGraph.vue  StepDetailPanel.vue  StepNode.vue  VerbosePanel.vue  VerboseToggle.vue
frontend/src/components/Results/: AgentRadarChart.vue  CoachingPlanCard.vue  CompliancePanel.vue  OverviewDashboard.vue  PatternInsights.vue  RawDataViewer.vue  RiskScoreChart.vue
frontend/src/components/UI/: MetricCard.vue  SeverityBadge.vue
frontend/src/composables/: useFlowEvents.ts  useFlowState.ts  useFlowWebSocket.ts
frontend/src/layouts/: default.vue
frontend/src/pages/: index.vue
frontend/src/pages/flow/: [runId].vue
frontend/src/services/: api.ts
frontend/src/stores/: flow.ts
frontend/src/types/: events.ts  flow.ts
frontend/src/utils/: formatters.ts
src/crewnecta_qa_flow/: main.py
src/crewnecta_qa_flow/crews/coaching/: coaching_crew.py
src/crewnecta_qa_flow/crews/qa_analysis/: qa_analysis_crew.py
src/crewnecta_qa_flow/flow/: qa_auditor_flow.py
src/crewnecta_qa_flow/state/: __init__.py  models.py
src/crewnecta_qa_flow/tools/: __init__.py  compliance_matcher.py  red_flag_scanner.py  scorecard_calc.py
ui/: app.py
(+10 files in other folders)
